# AGFB

./: .gitignore  README.md  all_components_smoke_test.ipynb  all_components_smoke_test.py  pyproject.toml  reproduce_paper_claims.ipynb
agfb-bench/: .gitignore  README.md  pyproject.toml
agfb-bench/agfb_bench/: __init__.py  _paths.py  aggregate.py  catalog.py  cli.py  config.py  fields.py  filters.py  metrics.py  noise.py  progress.py  realimg.py  runner.py
agfb-filters/: MANIFEST.in  README.md  pyproject.toml
agfb-filters/agfb_filters/: __init__.py  agfb.py  autorunner.py  base.py  central_difference.py  cpgf.py  definitions.py  derivative_of_gaussian.py  execution.py  farid_simoncelli.py  freeman_adelson.py  polynomial.py  prewitt.py  roberts.py  runner.py  savitzky_golay.py  scharr.py  sobel.py
agfb-filters/agfb_filters/filters/: __init__.py  ando.py  box.py  catalog.py  central_difference.py  cpgf.py  definitions.py  derivative_of_gaussian.py  farid_simoncelli.py  freeman_adelson.py  iterative.py  nonlinear.py  orientable.py  orientation_bank.py  polynomial.py  prewitt.py  recursive.py  registry.py  riesz.py  roberts.py  savitzky_golay.py  scharr.py  sobel.py  sparse.py
agfb-filters/agfb_filters/runtime/: __init__.py  autorunner.py  execution.py  runner.py  tensor_ops.py
agfb-filters/cpgf_filters/: __init__.py  base.py  central_difference.py  cpgf.py  derivative_of_gaussian.py  farid_simoncelli.py  freeman_adelson.py  prewitt.py  roberts.py  savitzky_golay.py  scharr.py  sobel.py
agfb-filters/notebooks/: step_edge_filter_walkthrough.ipynb
agfb-filters/notebooks/filters/: ando_3.ipynb  ando_4.ipynb  ando_5.ipynb  anisotropic_gaussian_orientation_bank.ipynb  central_difference.ipynb  cpgf.ipynb  deriche_recursive_gaussian_derivative.ipynb  derivative_of_gaussian.ipynb  farid_simoncelli_5.ipynb  farid_simoncelli_7.ipynb  freeman_adelson_g1.ipynb  haar_box_gradient.ipynb  perona_malik_gradient.ipynb  prewitt_3.ipynb  roberts.ipynb  robust_local_plane_gradient.ipynb  savitzky_golay.ipynb  scharr_3.ipynb  sobel_3.ipynb  sobel_5.ipynb  (+2 more)
agfb-filters/scripts/: check_unicode.py  render_cpgf_step_response.py
agfb-filters/tests/: test_autorunner.py  test_custom_filters.py  test_extended_filters.py  test_filters_smoke.py  test_orientable_filters.py  test_packaging.py  test_pipeline_integration.py  test_runner_step_edge.py  test_shapes_and_batching.py  test_unicode_clean.py
agfb-generators/: .gitignore  README.md  agfb_generator_visual_check.ipynb  pyproject.toml
agfb-generators/agfb_generators/: __init__.py  _junction.py  anisotropic_blob.py  asymmetric_ridge.py  base.py  chirp.py  composite.py  curved_arc.py  curved_ridge.py  finite_ramp.py  gabor_packet.py  gaussian_blob.py  gaussian_ridge.py  hard_step.py  junction_truth.py  l_junction.py  mach_band.py  notebook.py  polynomial.py  roof_profile.py  sinusoid.py  smoothed_bar.py  smoothed_ramp.py  smoothed_step.py  t_junction.py  vessel_junction.py  vessel_truth.py  x_junction.py  y_junction.py
agfb-generators/cpgf_generators/: __init__.py  base.py  composite.py  curved_arc.py  diagnostics.py  gaussian_blob.py  gaussian_ridge.py  hard_step.py  polynomial.py  sinusoid.py  smoothed_bar.py  smoothed_step.py
agfb-generators/docs/: agfb-rename-plan.md
agfb-generators/tests/: test_analytic_gradients.py  test_base_helpers.py  test_intensity_contract.py  test_junction_generators.py  test_notebook_helpers.py  test_parameter_validation.py  test_pipeline_integration.py  test_public_api.py  test_ridge_vessel_generators.py  test_scale_frequency_generators.py  test_smoothed_step_regression.py  test_transition_generators.py
agfb-metrics/: README.md  pyproject.toml
agfb-metrics/agfb_metrics/: __init__.py  _cross_edge_profile.py  a1_nrmse.py  a2_angular_mae.py  a3_tail_vector_error.py  angular_mae.py  b1_localization_offset.py  b2_tangential_normal_leak.py  b3_magnitude_bias.py  b4_edge_fwhm.py  b5_sidelobe_ratio.py  base.py  c1_noise_gain.py  c2_tail_spurious_grad.py  edge_fwhm.py  localization_offset.py  magnitude_bias.py  noise_gain.py  notebook.py  nrmse.py  sidelobe_ratio.py  tail_spurious_grad.py  tail_vector_error.py  tangential_normal_leak.py
agfb-metrics/cpgf_metrics/: __init__.py  _cross_edge_profile.py  a1_nrmse.py  a2_angular_mae.py  a3_tail_vector_error.py  b1_localization_offset.py  b2_tangential_normal_leak.py  b3_magnitude_bias.py  b4_edge_fwhm.py  b5_sidelobe_ratio.py  base.py  c1_noise_gain.py  c2_tail_spurious_grad.py
agfb-metrics/notebooks/: metric_behavior_check.ipynb
agfb-metrics/tests/: test_a1_nrmse.py  test_a2_angular_mae.py  test_a3_tail_vector_error.py  test_angular_mae.py  test_b1_localization_offset.py  test_b2_tangential_normal_leak.py  test_b3_magnitude_bias.py  test_b4_edge_fwhm.py  test_b5_sidelobe_ratio.py  test_base.py  test_c1_noise_gain.py  test_c2_tail_spurious_grad.py  test_cross_edge_profile.py  test_edge_fwhm.py  test_evaluator.py  test_localization_offset.py  test_magnitude_bias.py  test_noise_gain.py  test_nrmse.py  test_pipeline_integration.py  test_runners.py  test_sidelobe_ratio.py  test_tail_spurious_grad.py  test_tail_vector_error.py  test_tangential_normal_leak.py  test_triton_pixel.py
agfb-noise/: .gitignore  README.md  pyproject.toml  references.bib
agfb-noise/agfb_noise/: __init__.py  base.py  catalog.py  dark_current.py  dead_pixel.py  fixed_pattern.py  gamma_speckle.py  gaussian.py  local_variance.py  noise.py  notebook.py  pepper.py  poisson.py  poisson_gaussian.py  quantization.py  random_impulse.py  rayleigh.py  registry.py  rician.py  salt.py  salt_pepper.py  speckle.py  stripe.py  uniform.py
agfb-noise/notebooks/: dark_current.ipynb  dead_pixel.ipynb  fixed_pattern.ipynb  gamma_speckle.ipynb  gaussian.ipynb  local_variance.ipynb  pepper.ipynb  poisson.ipynb  poisson_gaussian.ipynb  quantization.ipynb  random_impulse.ipynb  rayleigh.ipynb  rician.ipynb  salt.ipynb  salt_pepper.ipynb  speckle.ipynb  stripe.ipynb  uniform.ipynb
agfb-noise/scripts/: benchmark_noise_1024.py  build_noise_notebooks.py
agfb-noise/tests/: test_noise.py  test_notebooks.py
(+144 files in other folders)
