[project]
name = "agfb-bench"
version = "0.1.0"
description = "AGFB synthetic benchmark runner - implements BENCHMARK_DESIGN.md (locked spec)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "J.C. Vaught", email = "jvaught@sc.edu" }]
dependencies = [
    "torch>=2.4",
    "polars>=1.0",
    "numpy>=1.26",
]

# Study R (real-image edge benchmark) reads .mat / image ground truth and uses
# distance transforms; the synthetic studies A-E need none of this.
[project.optional-dependencies]
realimg = [
    "scipy>=1.10",
    "pillow>=10.0",
]

[project.scripts]
agfb-bench = "agfb_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agfb_bench"]

# The four AGFB component packages are consumed via sys.path injection
# (agfb_bench._paths), mirroring the workspace smoke test, so they are not
# declared as resolved dependencies here. Set AGFB_WORKSPACE to override the
# search if the workspace is not adjacent to the repository.
