[project]
name = "agfb-filters"
version = "0.0.1"
description = "Batched gradient filter implementations for PyTorch"
readme = "README.md"
authors = [{ name = "J.C. Vaught" }]
requires-python = ">=3.11"

dependencies = [
    "torch>=2.4,<2.7",
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "ty>=0.0.1a8",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.src]
exclude = ["tests/test_pipeline_integration.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.setuptools.packages.find]
include = ["agfb_filters*"]
