[project]
name = "agfb-filters"
version = "0.1.0"
description = "Batched gradient filter implementations for PyTorch"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "J.C. Vaught" }]
requires-python = ">=3.11"

dependencies = [
    "torch>=2.4,<2.7",
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "ruff>=0.7",
    "ty>=0.0.1a8",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.ty.src]
exclude = ["notebooks"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.setuptools.packages.find]
include = ["agfb_filters*"]
