[project]
name = "agfb-generators"
version = "0.0.1"
description = "Batched analytic image generators for the Analytic Gradient Filter Benchmark"
authors = [{ name = "J.C. Vaught" }]
requires-python = ">=3.11"

dependencies = [
    "torch>=2.4,<2.7",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "check-unicode>=0.6.0",
    "ipykernel>=6.29",
    "matplotlib>=3.10.9",
    "pytest>=8.0",
    "radon>=6.0.1",
    "ruff>=0.7",
    "semgrep>=1.163.0",
    "ty>=0.0.1a8",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E741"]  # `I` is the intensity field in the analytic formulas.

[tool.check-unicode]
check-confusables = true
severity = "error"
exclude-patterns = [
    ".git/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".venv/*",
    "**/__pycache__/*",
]
