[project]
name = "agfb-generators"
version = "0.1.0"
description = "Batched analytic image generators for the Analytic Gradient Filter Benchmark"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "J.C. Vaught" }]
requires-python = ">=3.11"
keywords = [
    "analytic gradients",
    "benchmark",
    "computer vision",
    "image processing",
    "pytorch",
    "synthetic data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4,<2.7",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/j-vaught/agfb-generators"
Repository = "https://github.com/j-vaught/agfb-generators"
Issues = "https://github.com/j-vaught/agfb-generators/issues"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "check-unicode>=0.6.0",
    "ipykernel>=6.29",
    "matplotlib>=3.10.9",
    "pytest>=8.0",
    "radon>=6.0.1",
    "ruff>=0.7",
    "semgrep>=1.163.0",
    "ty>=0.0.1a8",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agfb_generators"]

[tool.hatch.build.targets.sdist]
include = [
    "/agfb_generators",
    "/agfb_generator_visual_check.ipynb",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E741"]  # `I` is the intensity field in the analytic formulas.

[tool.check-unicode]
check-confusables = true
severity = "error"
exclude-patterns = [
    ".git/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".venv/*",
    "**/__pycache__/*",
]
