[project]
name = "agfb-metrics"
version = "0.0.1"
description = "Batched, GPU-accelerated benchmark metrics for the Analytical Gradient Filter Benchmark (AGFB) suite"
authors = [{ name = "J.C. Vaught" }]
requires-python = ">=3.11"

dependencies = [
    "torch>=2.4,<2.7",
    "numpy>=2.0",
    "triton>=3.2; platform_machine == 'x86_64' and sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "pytest>=8.0",
    "ruff>=0.7",
    "ty>=0.0.1a8",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.src]
exclude = ["tests/test_pipeline_integration.py", "agfb_metrics/metrics/triton_pixel.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E741"]  # `I` is the intensity field, per spec math notation
